package edu.fiuba.algo3.Defenses.States;

public interface Builder<T> {
    T actualState();
}

