@startuml
'https://plantuml.com/class-diagram

interface Builder{

    +actualState(): class
}

class NullBuilder{

    +actualState(): Attacker
}

class UnderConstructionAttacker{

    -timeOfConstruction: int
    -range: Distance
    -position: Coordinate
    -debuff: Buff

    +UnderConstructionAttacker(timeOfConstruction: int, debuff: Buff, position: Coordinate, range: Distance)
    +actualState(): Attacker

}

class UnderDestructionSandTrap{

    -debuff: Buff
    -timeOfConstruction: int
    -player: Player

    +UnderDestructionSandTrap(timeOfConstruction: int, player: Player)
    +actualState(): Builder<deleter>


}

Builder <|.. NullBuilder
Builder <|.. UnderConstructionAttacker
Builder <|.. UnderDestructionSandTrap



@enduml